--- a/src/Q4/VirtualPetLab/VirtualPetLab/MainForm.form
+++ b/src/Q4/VirtualPetLab/VirtualPetLab/MainForm.form
@@ -10,7 +10,9 @@
     <children>
       <component id="2a6e5" class="javax.swing.JButton" binding="feedButton">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="244" height="30"/>
+          </grid>
         </constraints>
         <properties>
           <text value="Feed"/>
@@ -18,7 +20,9 @@
       </component>
       <component id="2b6f6" class="javax.swing.JButton" binding="playButton">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="244" height="30"/>
+          </grid>
         </constraints>
         <properties>
           <text value="Play"/>
@@ -26,7 +30,9 @@
       </component>
       <component id="2c7g7" class="javax.swing.JButton" binding="sleepButton">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="244" height="30"/>
+          </grid>
         </constraints>
         <properties>
           <text value="Sleep"/>
